# kconfigeditor

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Cargo.toml  README.md  build.rs  org.kde.configeditor.desktop  org.kde.configeditor.metainfo.xml
.flatpak/: 0001-Patch-out-running-brwap-during-the-build.patch  generated-sources.json  pyparsing.yaml
qml/: AppsPage.qml  EntriesPage.qml  FilesPage.qml  GroupsPage.qml  main.qml
src/: appsmodel.rs  config.rs  entrymodel.rs  filesmodel.rs  groupsmodel.rs  helper.cpp  helper.h  main.rs  qstandardpaths.cpp  qstandardpaths.h  qstandardpaths.rs  util.rs
