# SPDX-FileCopyrightText: 2026 Nicolas Fella <nicolas.fella@gmx.de>
# SPDX-License-Identifier: GPL-2.0-only OR GPL-3.0-only OR LicenseRef-KDE-Accepted-GPL

[package]
name = "configeditor"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0.192"
cxx-qt = { path = "../cxx-qt/crates/cxx-qt" }
cxx-qt-lib = { path = "../cxx-qt/crates/cxx-qt-lib", features = ["qt_full"] }
gio = "0.22.4"
libflatpak = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-xml-rs = "0.8.2"
serde_derive = "1.0.228"

[build-dependencies]
cxx-qt-build = { path = "../cxx-qt/crates/cxx-qt-build" }
cmake-package = "0.1.10"
