# SPDX-FileCopyrightText: 2026 Nicolas Fella <nicolas.fella@gmx.de>
# SPDX-License-Identifier: GPL-2.0-only OR GPL-3.0-only OR LicenseRef-KDE-Accepted-GPL

[package]
name = "configeditor"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0.192"
cxx-qt = "0.9.1"
cxx-qt-lib = { version = "0.9.1", features = ["qt_full"]}
gio = "0.22.4"
libflatpak = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-xml-rs = "0.8.2"
serde_derive = "1.0.228"

[build-dependencies]
cxx-qt-build = "0.9.1"
cmake-package = "0.1.10"
